# mplayer

./: Makefile  README.md  mplayer.sh  pyproject.toml  requirements.txt
mplayer/: __main__.py  api.py  app.py  core.py  ctx.py  filters.py  input_context.py  main.py  persist.py  player.py  playlist.py  schedule.py  url.py  util.py  vlc_player.py
test/: __init__.py
test/smoke/: conftest.py  test_api.py  test_mplayer.py
test/smoke/resources/: playlist.yaml  schedule.yaml
test/unit/: test_playlist.py  test_schedule.py  test_util.py
