[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
name = "mplayer"
version = "0.0.2"
authors = [
  { name = "Toni Lammi", email="tangojulielima@gmail.com"}
]
description="Program for running media shows"
requires-python = ">=3.11"

[project.scripts]
mplayer = "mplayer.main:main"

[tool.setuptools]
packages = ["mplayer"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
